--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,27 +3,55 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "llm-orc"
+name = "llm-orchestra"
 version = "0.1.0"
-description = "Multi-agent LLM communication system with flexible role definitions"
+description = "Multi-agent LLM communication system with ensemble orchestration"
+readme = "README.md"
+license = {file = "LICENSE"}
 authors = [
     {name = "Nathan Green", email = "contact@nate.green"},
 ]
+keywords = ["llm", "agents", "orchestration", "ensemble", "ai", "multi-agent"]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Science/Research", 
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "License :: OSI Approved :: MIT License",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+]
 dependencies = [
-    "asyncio",
     "websockets",
-    "aiohttp",
+    "aiohttp", 
     "pydantic",
-    "mcp",
     "anthropic",
     "google-generativeai",
     "ollama",
-    "pytest",
-    "pytest-asyncio",
     "click",
     "pyyaml",
 ]
 requires-python = ">=3.11"
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0", 
+    "pytest-cov>=4.1.0",
+    "black>=23.7.0",
+    "ruff>=0.0.287",
+    "mypy>=1.5.0",
+    "build",
+    "twine",
+]
+
+[project.urls]
+"Homepage" = "https://github.com/mrilikecoding/llm-orc"
+"Repository" = "https://github.com/mrilikecoding/llm-orc"
+"Bug Tracker" = "https://github.com/mrilikecoding/llm-orc/issues"
+"Documentation" = "https://github.com/mrilikecoding/llm-orc#readme"
 
 [project.scripts]
 llm-orc = "llm_orc.cli:cli"
@@ -50,6 +78,9 @@ warn_unused_configs = true
 testpaths = ["tests"]
 asyncio_mode = "auto"
 addopts = "--cov=llm_orc --cov-report=term-missing"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/llm_orc"]
 
 [dependency-groups]
 dev = [
