Fix PyPI secret name to match eddi/StreamPoseML pattern (PYPI_API_KEY)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -69,7 +69,7 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
       continue-on-error: true
       with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+        password: ${{ secrets.PYPI_API_KEY }}
         skip-existing: true
         verbose: true
 
