--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llm-orchestra"
-version = "0.1.2"
+version = "0.1.3"
 description = "Multi-agent LLM communication system with ensemble orchestration"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -32,6 +32,7 @@ dependencies = [
     "ollama",
     "click",
     "pyyaml",
+    "cryptography",
 ]
 requires-python = ">=3.11"
 
