fix: resolve all linting and typing issues in llm-orc test suite
- Add return type annotations to all test functions (-> None)
- Fix method assignment issues using patch.object context managers
- Add proper type annotations to function parameters
- Fix line length issues to comply with ruff formatting rules
- Add py.typed marker for proper package typing support
- Maintain all existing test functionality while achieving full type safety

All 71 tests pass with 87% coverage
All mypy and ruff checks pass

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,3 +87,8 @@ markers = [
 [tool.hatch.build.targets.wheel]
 packages = ["src/llm_orc"]
 
+[dependency-groups]
+dev = [
+    "types-pyyaml>=6.0.12.20250516",
+]
+
