--- a/pyproject.toml
+++ b/pyproject.toml
@@ -90,5 +90,11 @@ packages = ["src/llm_orc"]
 [dependency-groups]
 dev = [
     "types-pyyaml>=6.0.12.20250516",
+    "pytest>=7.4.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-cov>=4.1.0",
+    "ruff>=0.0.287",
+    "mypy>=1.5.0",
+    "pip-audit>=2.6.0",
 ]
 
