feat: complete OAuth authentication implementation with enhanced ensemble features
- Implement full OAuth authentication flow with automatic token refresh
- Make cost_per_token optional for subscription-based pricing models
- Add CLI override behavior with default_task semantics for better UX
- Implement smart fallback system with context-aware model selection
- Add comprehensive documentation with OAuth examples and security guidance
- Create diverse ensemble examples showcasing mixed local/cloud models
- Add code review ensemble demonstrating CLI override functionality
- Clean up test ensembles and add production-ready examples

Closes #32

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,20 @@ venv.bak/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
+# LLM Orchestra - Security Critical
+# Never commit credential files or encryption keys
+*.enc
+.key
+credentials.enc
+.llm-orc/credentials.enc
+.llm-orc/.key
+~/.llm-orc/
+
+# LLM Orchestra - Local Configuration
+# Local ensemble variations and personal configs
+.llm-orc/ensembles/*-local.yaml
+.llm-orc/ensembles/local-*.yaml
+
+# Uncomment to ignore project config variations per developer
+# .llm-orc/config.yaml
