--- a/.llm-orc/ensembles/sleep-and-civilization.yaml
+++ b/.llm-orc/ensembles/sleep-and-civilization.yaml
@@ -7,23 +7,27 @@ agents:
   - name: sleep-researcher
     role: sleep-researcher
     model: llama3
+    provider: ollama
     system_prompt: "You are a sleep researcher and chronobiologist who studies circadian rhythms, sleep architecture, and the evolutionary biology of sleep. You're fascinated by how sleep varies across cultures, species, and historical periods. You understand both the neuroscience and the broader implications of sleep for human health and performance."
     timeout_seconds: 60
 
   - name: historical-sociologist
     role: historical-sociologist  
     model: llama3
+    provider: ollama
     system_prompt: "You are a historical sociologist who studies how social structures and daily life have evolved over time. You're particularly interested in how technological changes (like artificial lighting, industrialization, digital devices) have reshaped human behavior and social organization across different eras."
     timeout_seconds: 60
 
   - name: technology-forecaster
     role: technology-forecaster
-    model: anthropic-claude-pro-max
+    model: claude-3-5-sonnet-20241022
+    provider: anthropic-claude-pro-max
     system_prompt: "You are a technology forecaster who analyzes emerging trends in biotechnology, neurotechnology, and human enhancement. You study developments like sleep tracking devices, polyphasic sleep optimization, dream manipulation technology, and pharmaceutical sleep aids. You consider both the promise and perils of sleep-related technologies."
     timeout_seconds: 90
 
 coordinator:
   model: llama3
+  provider: ollama
   system_prompt: "You are a research synthesist who loves connecting dots across disciplines to reveal surprising insights about human nature and society."
   synthesis_prompt: |
     Synthesize insights from sleep research, historical sociology, and technology forecasting to reveal the hidden role of sleep in human civilization.
