refactor: remove redundant 'role' field from ensemble configurations
The 'role' field was redundant since we already have:
- 'name': identifies the agent
- 'system_prompt': defines the actual behavior

Changes:
- Updated _load_role_from_config to use agent name instead of role
- Removed role field from all ensemble configurations (local and global)
- Used automated sed command to clean up all existing ensembles
- Validation ensembles now use system_prompt instead of role

This simplifies ensemble configuration and reduces confusion about
which field actually controls agent behavior.

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -7,15 +7,11 @@ project:
 
 model_profiles:
   development:
-  - cost_per_token: 0.0
     model: llama3
     provider: ollama
+    cost_per_token: 0.0
   
   production:
-  - cost_per_token: 3.0e-06
-    model: claude-3-5-sonnet
-    provider: anthropic
-  
-  oauth_test:
-  - model: claude-3-5-sonnet
+    model: claude-sonnet-4-20250514
     provider: anthropic-claude-pro-max
+    cost_per_token: 3.0e-06
