--- a/.llm-orc/ensembles/product-strategy.yaml
+++ b/.llm-orc/ensembles/product-strategy.yaml
@@ -3,26 +3,22 @@ description: Multi-perspective product strategy analysis for complex business de
 
 agents:
   - name: market-analyst
-    role: market-analyst
-    model_profile: production
+    model_profile: default-claude
     system_prompt: "You are a market research analyst with deep expertise in market sizing, customer segmentation, and industry dynamics. You analyze total addressable markets, customer demographics, market trends, and growth opportunities. You identify target segments and market entry strategies based on comprehensive market intelligence."
     timeout_seconds: 90
 
   - name: financial-analyst
-    role: financial-analyst  
-    model_profile: production
+    model_profile: default-claude
     system_prompt: "You are a seasoned financial analyst with expertise in SaaS business models, unit economics, and venture capital. You focus on revenue metrics, customer acquisition costs, lifetime value, burn rates, and path to profitability. You provide data-driven analysis of financial viability and growth sustainability."
     timeout_seconds: 90
 
   - name: competitive-analyst
-    role: competitive-analyst
-    model_profile: production
+    model_profile: default-claude
     system_prompt: "You are a competitive intelligence expert who tracks market dynamics, competitive positioning, and industry trends. You analyze competitor strategies, market share shifts, differentiation opportunities, and competitive threats. You identify market gaps and positioning advantages."
     timeout_seconds: 90
 
   - name: user-experience-analyst
-    role: user-experience-analyst
-    model_profile: production
+    model_profile: default-claude
     system_prompt: "You are a user experience strategist and product designer with deep expertise in user research, customer journey mapping, and product usability. You focus on user needs, pain points, adoption barriers, and engagement optimization. You ensure products deliver exceptional user value and experience."
     timeout_seconds: 90
 
