Improve OAuth UX by simplifying CLI commands (#38)
* feat: implement interactive OAuth UX with menu-driven interfaces (#35)

## Core Implementation
- Add ProviderRegistry to model providers and their capabilities
- Create MenuSystem for dynamic, emoji-rich interactive menus
- Transform auth commands from typing to menu selection

## Interactive Auth Setup (`llm-orc auth setup`)
- Menu-driven provider selection with emojis and descriptions
- Smart authentication method menus based on provider capabilities
- Anthropic-specific menu: Claude Pro/Max vs API Key vs Both vs Help
- Comprehensive help system with authentication method guide
- Support for no-auth providers (Ollama) and custom providers
- Visual success/error feedback throughout

## Enhanced Auth List (`llm-orc auth list`)
- Preserve existing behavior for backwards compatibility
- New interactive mode: `llm-orc auth list -i`
- Action menu: Test, Add, Remove, Details, Refresh, Quit
- Provider status display with emojis and registry info
- Interactive provider selection for actions

## Provider Registry Architecture
- Modular provider definitions with auth method capabilities
- Support for OAuth, API Key, and no-auth providers
- Extensible for future providers without code changes
- Dynamic menu generation from provider data

## Visual Design Excellence
- Consistent emoji usage: 🎯 🔐 🔑 ✅ ❌ 🔄 ⚠️ ℹ️
- Clear menu formatting with numbered options
- Visual feedback for all operations
- Descriptive help text and recommendations

## Testing
- Manual testing confirms all interactive flows work correctly
- Backwards compatibility maintained for existing commands
- Provider selection, auth method selection, help system all functional

Closes #35

* feat: organize list-ensembles output by location

Group ensembles by Local Repo vs Global configuration directories with
clear visual indicators (📁 and 🌐) for better UX. Uses dynamic
configuration paths respecting XDG standards.

- Local ensembles shown first with (.llm-orc/ense

--- a/.llm-orc/ensembles/code-review.yaml
+++ b/.llm-orc/ensembles/code-review.yaml
@@ -12,25 +12,22 @@ default_task: |
 
 agents:
   - name: security-auditor
-    role: security-auditor
-    model: llama3
+    model_profile: free-local
     system_prompt: "You are a cybersecurity expert specializing in code security audits. You identify vulnerabilities, insecure patterns, authentication issues, data exposure risks, and injection attacks. You're thorough about security best practices and provide specific remediation steps."
     timeout_seconds: 90
 
   - name: performance-engineer
-    role: performance-engineer  
-    model: llama3
+    model_profile: free-local
     system_prompt: "You are a performance engineering specialist who analyzes code for efficiency bottlenecks, memory usage, algorithmic complexity, and scalability issues. You understand profiling, optimization techniques, and how code changes impact production performance."
     timeout_seconds: 90
 
   - name: senior-reviewer
-    role: senior-reviewer
-    model: anthropic-claude-pro-max
+    model_profile: default-claude
     system_prompt: "You are a senior software engineer with 10+ years of experience doing code reviews. You focus on code quality, maintainability, design patterns, error handling, testing, and adherence to team standards. You provide constructive feedback that helps developers grow."
     timeout_seconds: 120
 
 coordinator:
-  model: anthropic-claude-pro-max
+  model_profile: default-claude
   system_prompt: "You are a tech lead coordinating a code review process. You synthesize feedback from security, performance, and senior engineering perspectives into actionable recommendations."
   synthesis_prompt: |
     Synthesize the code review feedback into a comprehensive assessment.
