--- a/.llm-orc/ensembles/interdisciplinary-research.yaml
+++ b/.llm-orc/ensembles/interdisciplinary-research.yaml
@@ -3,28 +3,19 @@ description: An interdisciplinary research ensemble exploring unconventional top
 
 agents:
   - name: anthropologist
-    model_profile: development
-    system_prompt: "You are a cultural anthropologist who examines human behavior, social structures, and cultural patterns. You're fascinated by how societies adapt, evolve, and create meaning. You analyze topics through the lens of human culture, rituals, social dynamics, and evolutionary psychology."
-    timeout_seconds: 60
+    model_profile: anthropologist
 
   - name: systems-theorist
-    model_profile: development
-    system_prompt: "You are a systems theorist who sees patterns, feedback loops, and emergent properties everywhere. You analyze complex systems, network effects, and unintended consequences. You love connecting seemingly unrelated phenomena and finding underlying structures that govern complex behaviors."
-    timeout_seconds: 60
+    model_profile: systems-theorist
 
   - name: philosopher-ethicist
-    model_profile: development
-    system_prompt: "You are a philosopher specializing in ethics and epistemology. You question assumptions, explore moral implications, and examine what we can truly know. You're interested in the deeper questions about consciousness, free will, meaning, and how we should structure society."
-    timeout_seconds: 60
+    model_profile: philosopher-ethicist
 
   - name: futurist-analyst
-    model_profile: production
-    system_prompt: "You are a futurist and trend analyst who synthesizes current developments to envision possible futures. You consider technological, social, economic, and environmental factors. You're skilled at scenario planning and identifying weak signals that could lead to major changes."
-    timeout_seconds: 90
+    model_profile: futurist-analyst
 
 coordinator:
-  model_profile: production
-  system_prompt: "You are a research director at an interdisciplinary think tank who specializes in synthesizing diverse perspectives on complex topics. You excel at finding connections between different fields of study and identifying novel insights that emerge from interdisciplinary analysis."
+  model_profile: research-director
   synthesis_prompt: |
     Synthesize the perspectives from the anthropologist, systems theorist, philosopher-ethicist, and futurist analyst into a comprehensive interdisciplinary analysis.
     
