--- a/examples/optimized-code-review.yaml
+++ b/examples/optimized-code-review.yaml
@@ -1,5 +1,5 @@
-name: code-review
-description: Comprehensive code review ensemble mixing local and cloud expertise for thorough analysis
+name: code-review-optimized
+description: Optimized code review ensemble using enhanced model profiles - no duplication!
 
 default_task: |
   Review this code submission for a production system. Provide a thorough analysis covering:
@@ -12,16 +12,16 @@ default_task: |
 
 agents:
   - name: security-auditor
-    model_profile: security-auditor
+    model_profile: security-auditor     # Uses specialized profile with security prompt and 90s timeout
 
   - name: performance-engineer
-    model_profile: performance-engineer
+    model_profile: performance-engineer # Uses specialized profile with performance prompt and 90s timeout
 
   - name: senior-reviewer
-    model_profile: senior-reviewer
+    model_profile: senior-reviewer      # Uses specialized profile with senior review prompt and 120s timeout
 
 coordinator:
-  model_profile: tech-lead
+  model_profile: tech-lead              # Uses specialized profile with tech lead prompt and 120s timeout
   synthesis_prompt: |
     Synthesize the code review feedback into a comprehensive assessment.
     
@@ -52,4 +52,3 @@ coordinator:
     2. [Follow-up items for future PRs]
     
     Focus on actionable, specific feedback that helps improve both the code and the developer's skills.
-  timeout_seconds: 120
