--- a/src/llm_orc/templates/local-config.yaml
+++ b/src/llm_orc/templates/local-config.yaml
@@ -1,13 +1,29 @@
+# Local project configuration for {project_name}
+# This file configures project-specific settings and model profiles
+
 project:
   name: "{project_name}"
+  
+  # Default models used as fallbacks when model loading fails
+  # These should reference profile names, not raw model names
   default_models:
-    test: free-local
-    quality: default-claude
+    test: free-local      # Fast, free model for general use and testing
+    quality: default-claude # High-quality model for important tasks and coordination
+
+# Model profiles define complete agent configurations
+# Each profile includes: model, provider, system_prompt, timeout_seconds, and cost_per_token
 model_profiles:
+  # Local development profile - free and fast
   free-local:
     model: llama3
     provider: ollama
     cost_per_token: 0.0
+    system_prompt: You are a helpful assistant that provides concise, accurate responses for local development and testing.
+    timeout_seconds: 30
+  
+  # High-quality profile for important tasks
   default-claude:
     model: claude-sonnet-4-20250514
     provider: anthropic-claude-pro-max
+    system_prompt: You are an expert assistant that provides high-quality, detailed analysis and solutions.
+    timeout_seconds: 60
