feat: add comprehensive configuration status checking with ensemble availability
- Add visual availability indicators (🟢/🟥) for all configuration sections
- Implement ensemble dependency analysis with provider availability checking
- Add default model profiles section with full resolution chain display
- Create consistent emoji-based visual hierarchy across all config sections
- Simplify default model configuration to single "test" fallback for clarity
- Add ensemble availability checking with detailed error reporting for missing providers
- Enhance config check commands with proper ordering and accessibility features
- Fix CLI test mocking for new configuration methods
- Ensure all linting compliance with proper line length handling

The configuration status system now provides enterprise-grade visibility with
consumer-grade usability, showing users exactly what's ready to use and what
needs setup with clear, actionable feedback.

Closes #X (configuration status checking enhancement)

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -1,8 +1,7 @@
 project:
   name: LLM Orchestra Test Project
   default_models:
-    test: local-free    # Fast, free model for general use and testing
-    quality: quality    # High-quality model for important tasks and coordination
+    test: local-free    # Fallback model for reliability and testing
 
 model_profiles:
   local-free:
