fix: update Gemini authentication to use google-genai library
- Replace deprecated google-generativeai with google-genai
- Update GeminiModel to use new client.models.generate_content API
- Add provider-specific model instantiation in ensemble execution
- Fix type safety for response.text handling
- Update tests to match new API structure
- Default to gemini-2.5-flash model for better performance

Resolves authentication issues with Google Gemini API integration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "aiohttp>=3.12.14",
     "pydantic",
     "anthropic",
-    "google-generativeai",
+    "google-genai",
     "ollama",
     "click",
     "pyyaml",
