feat: complete performance enhancement implementation with CLI integration
- Enhanced invoke command with --streaming and --max-concurrent flags
- Implemented comprehensive performance monitoring hooks for Issue #27
- Added HTTP connection pooling with singleton pattern for efficiency
- Created streaming execution interface with AsyncGenerator for real-time progress
- Implemented smart concurrency defaults with configuration overrides
- Added performance configuration loading with global/local merging
- Fixed all type annotations and resolved mypy issues
- Fixed OAuth token storage tests with proper mocking
- Adjusted timing test assertions for better stability
- Fixed all ruff line length violations and formatting issues

Performance features ready for production use with comprehensive test coverage.
Dependency-aware execution verified working with 2-phase model.

--- a/src/llm_orc/templates/global-config.yaml
+++ b/src/llm_orc/templates/global-config.yaml
@@ -67,3 +67,31 @@ model_profiles:
     cost_per_token: 0.0
     system_prompt: Respond with 'Authentication working' to confirm local model access.
     timeout_seconds: 30
+
+# Performance configuration with sensible defaults
+performance:
+  # Resource management settings
+  concurrency:
+    # Maximum concurrent agents (0 = unlimited, uses smart defaults)
+    max_concurrent_agents: 0
+    # Connection pooling settings
+    connection_pool:
+      max_connections: 100
+      max_keepalive: 20
+      keepalive_expiry: 30
+    
+  # Execution settings
+  execution:
+    # Default timeout for agent execution (seconds)
+    default_timeout: 60
+    # Performance monitoring hooks enabled
+    monitoring_enabled: true
+    # Streaming execution enabled by default
+    streaming_enabled: true
+    
+  # Memory management
+  memory:
+    # Memory-efficient mode (reduces memory usage at slight performance cost)
+    efficient_mode: false
+    # Maximum memory usage threshold (MB, 0 = unlimited)
+    max_memory_mb: 0
