--- a/.llm-orc/ensembles/mycology-meets-technology.yaml
+++ b/.llm-orc/ensembles/mycology-meets-technology.yaml
@@ -13,18 +13,19 @@ agents:
   - name: biomimicry-researcher
     model_profile: biomimicry-researcher
 
-coordinator:
-  model_profile: research-coordinator
-  synthesis_prompt: |
-    Synthesize insights from the mycologist, network engineer, and biomimicry researcher to explore fungal-inspired technology innovations.
-    
-    Provide:
-    1. Specific fungal network properties that could inspire new technologies
-    2. Concrete applications in distributed computing or network design
-    3. Technical challenges and how fungal solutions might address them
-    4. Potential breakthrough innovations at this intersection
-    5. Implementation roadmap for the most promising concepts
-    6. Environmental and sustainability implications
-    
-    Focus on actionable insights that could lead to real technological advances.
-  timeout_seconds: 120
+  - name: research-coordinator
+    model_profile: research-coordinator
+    depends_on: [mycologist, network-engineer, biomimicry-researcher]
+    timeout_seconds: 120
+    system_prompt: |
+      Synthesize insights from the mycologist, network engineer, and biomimicry researcher to explore fungal-inspired technology innovations.
+      
+      Provide:
+      1. Specific fungal network properties that could inspire new technologies
+      2. Concrete applications in distributed computing or network design
+      3. Technical challenges and how fungal solutions might address them
+      4. Potential breakthrough innovations at this intersection
+      5. Implementation roadmap for the most promising concepts
+      6. Environmental and sustainability implications
+      
+      Focus on actionable insights that could lead to real technological advances.
