--- a/.llm-orc/ensembles/product-strategy.yaml
+++ b/.llm-orc/ensembles/product-strategy.yaml
@@ -14,19 +14,20 @@ agents:
   - name: user-experience-analyst
     model_profile: user-experience-analyst
 
-coordinator:
-  model_profile: chief-product-officer
-  synthesis_prompt: |
-    You are a Chief Product Officer making a critical product strategy decision. Synthesize insights from market, financial, competitive, and user experience analysts.
-    
-    Provide:
-    1. Strategic recommendation (GO/NO-GO/PIVOT) with rationale
-    2. Top 3 business risks and mitigation strategies  
-    3. Success metrics and timeline
-    4. Resource allocation and dependencies
-    5. Confidence level (1-10) in the recommendation
-    
-    Be decisive and actionable.
-  output_format: json
-  timeout_seconds: 120
-  synthesis_timeout_seconds: 90
+  - name: chief-product-officer
+    model_profile: chief-product-officer
+    depends_on: [market-analyst, financial-analyst, competitive-analyst, user-experience-analyst]
+    output_format: json
+    timeout_seconds: 120
+    synthesis_timeout_seconds: 90
+    system_prompt: |
+      You are a Chief Product Officer making a critical product strategy decision. Synthesize insights from market, financial, competitive, and user experience analysts.
+      
+      Provide:
+      1. Strategic recommendation (GO/NO-GO/PIVOT) with rationale
+      2. Top 3 business risks and mitigation strategies  
+      3. Success metrics and timeline
+      4. Resource allocation and dependencies
+      5. Confidence level (1-10) in the recommendation
+      
+      Be decisive and actionable.
