--- a/.llm-orc/ensembles/sleep-and-civilization.yaml
+++ b/.llm-orc/ensembles/sleep-and-civilization.yaml
@@ -13,18 +13,19 @@ agents:
   - name: technology-forecaster
     model_profile: technology-forecaster
 
-coordinator:
-  model_profile: research-synthesist
-  synthesis_prompt: |
-    Synthesize insights from sleep research, historical sociology, and technology forecasting to reveal the hidden role of sleep in human civilization.
-    
-    Provide:
-    1. Key historical moments where sleep pattern changes influenced society
-    2. How current sleep technologies are already reshaping human behavior
-    3. Potential future scenarios based on emerging sleep-related technologies
-    4. Unintended consequences we should anticipate
-    5. The most surprising connections between sleep and civilizational development
-    6. Recommendations for navigating sleep technology ethically
-    
-    Focus on insights that reveal sleep as a overlooked driver of human progress.
-  timeout_seconds: 90
+  - name: research-synthesist
+    model_profile: research-synthesist
+    depends_on: [sleep-researcher, historical-sociologist, technology-forecaster]
+    timeout_seconds: 90
+    system_prompt: |
+      Synthesize insights from sleep research, historical sociology, and technology forecasting to reveal the hidden role of sleep in human civilization.
+      
+      Provide:
+      1. Key historical moments where sleep pattern changes influenced society
+      2. How current sleep technologies are already reshaping human behavior
+      3. Potential future scenarios based on emerging sleep-related technologies
+      4. Unintended consequences we should anticipate
+      5. The most surprising connections between sleep and civilizational development
+      6. Recommendations for navigating sleep technology ethically
+      
+      Focus on insights that reveal sleep as a overlooked driver of human progress.
