feat: Add comprehensive visualization system for ensemble execution (closes #27)
- Implement real-time terminal visualization with Rich library
- Add event streaming architecture for monitoring ensemble execution
- Create agent status tracking with progress bars and performance metrics
- Add visualization configuration system with multiple modes
- Integrate visualization into CLI with --visualize flag
- Support terminal, web, debug, and minimal visualization modes
- Add comprehensive event system for execution monitoring
- Include agent lifecycle tracking and dependency visualization
- Add performance metrics and cost tracking
- Create interactive dashboard with live updates

The visualization system provides:
- Real-time progress tracking for agents and overall ensemble
- Live agent status with model, progress, duration, and cost info
- Performance metrics including execution time and cost summaries
- Interactive terminal dashboard with Rich UI components
- Configurable visualization modes and settings
- Event-driven architecture for extensibility

Usage:
llm-orc invoke ensemble-name --visualize
llm-orc invoke ensemble-name --visualize --visualization-mode debug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "pyyaml",
     "cryptography",
     "requests>=2.32.4",
+    "rich>=13.0.0",
 ]
 requires-python = ">=3.11"
 
