--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ credentials.enc
 
 # Uncomment to ignore project config variations per developer
 # .llm-orc/config.yaml
+
+# Meta-repo context
+CLAUDE.md
