--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,7 +65,10 @@ line-length = 88
 target-version = "py311"
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
+select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "C90"]
+
+[tool.ruff.lint.mccabe]
+max-complexity = 10
 
 [tool.mypy]
 python_version = "3.11"
