--- a/src/llm_orc/templates/ensembles/example-local-ensemble.yaml
+++ b/src/llm_orc/templates/ensembles/example-local-ensemble.yaml
@@ -3,12 +3,12 @@ description: Example ensemble for local development and testing
 default_task: Help with development tasks using local and quality models
 agents:
   - name: researcher
-    model_profile: free-local
+    model_profile: micro-local
   - name: reviewer
-    model_profile: free-local
+    model_profile: micro-local
     system_prompt: You are a code reviewer that provides detailed feedback and suggestions for improvement.
   - name: synthesizer
-    model_profile: default-claude
+    model_profile: default
     depends_on: [researcher, reviewer]
     system_prompt: |
       Combine the research findings and review feedback into a coherent response.
