--- a/src/llm_orc/templates/local-config.yaml
+++ b/src/llm_orc/templates/local-config.yaml
@@ -7,22 +7,30 @@ project:
   # Default fallback model used when model loading fails
   # Should reference a reliable, free local profile name
   default_models:
-    test: free-local      # Fallback model for reliability and testing
+    test: micro-local     # Fallback model for reliability and testing
 
 # Model profiles define complete agent configurations
 # Each profile includes: model, provider, system_prompt, timeout_seconds, and cost_per_token
 model_profiles:
   # Local development profile - free and fast
-  free-local:
-    model: llama3
+  micro-local:
+    model: qwen2:0.5b
     provider: ollama
     cost_per_token: 0.0
-    system_prompt: You are a helpful assistant that provides concise, accurate responses for local development and testing.
-    timeout_seconds: 30
+    system_prompt: You are a quick analyst for rapid local analysis.
+    timeout_seconds: 15
   
-  # High-quality profile for important tasks
-  default-claude:
+  # Standard local reasoning
+  default-local:
+    model: llama3:8b
+    provider: ollama
+    cost_per_token: 0.0
+    system_prompt: You are a capable analyst for thorough local analysis.
+    timeout_seconds: 60
+  
+  # Standard cloud reasoning for important tasks
+  default:
     model: claude-sonnet-4-20250514
     provider: anthropic-claude-pro-max
-    system_prompt: You are an expert assistant that provides high-quality, detailed analysis and solutions.
+    system_prompt: You are an expert analyst with strong reasoning capabilities.
     timeout_seconds: 60
