Improve library test coverage to 100% and enforce 95% CI threshold
- Add comprehensive test coverage for all library functions
- Include 15 new test classes covering ensemble analysis, display functions,
  show_ensemble_info command, and edge cases
- Achieve 100% library module coverage (187/187 lines)
- Improve overall project coverage from 76% to 95%
- Add --cov-fail-under=95 to CI pipeline and pytest config
- All 45 tests passing with proper error handling and type annotations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ warn_unused_configs = true
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 asyncio_mode = "auto"
-addopts = "--cov=llm_orc --cov-report=term-missing"
+addopts = "--cov=llm_orc --cov-report=term-missing --cov-fail-under=95"
 markers = [
     "asyncio: marks tests as requiring asyncio"
 ]
