--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
     
     - name: Run tests
       run: |
-        uv run pytest --cov=src --cov-report=xml --cov-report=term-missing
+        uv run pytest --cov=src --cov-report=xml --cov-report=term-missing --cov-fail-under=95
     
     - name: Upload coverage to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
